# math-series

./: README.md  pyproject.toml
math_series/: fib.py  math_series.py
math_series/modules/: fib.py  lucas.py  sum.py
tests/: test_fib.py  test_lucas.py  test_math_series.py
